// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemCard should not render hasArchitecture 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-9"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-9"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should not render hasKernelModules 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-11"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-11"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should not render hasKernelRelease 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-8"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-8"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should not render hasLastBoot 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-10"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-10"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should not render hasRelease 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-7"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-7"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should render correctly with rhsm facts 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-4"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                Not available
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              x86_64
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should render enabled/disabled 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-3"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;

exports[`OperatingSystemCard should render extra 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-12"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-12"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Operating system
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <div
          class="pf-c-content"
        >
          <dl
            class=""
          >
            <dt
              class=""
            >
              Release
            </dt>
            <dd
              class=""
            >
              <span>
                test-release
              </span>
            </dd>
            <dt
              class=""
            >
              Kernel release
            </dt>
            <dd
              class=""
            >
              test-kernel
            </dd>
            <dt
              class=""
            >
              Architecture
            </dt>
            <dd
              class=""
            >
              test-arch
            </dd>
            <dt
              class=""
            >
              Last boot time
            </dt>
            <dd
              class=""
            >
              Not available
            </dd>
            <dt
              class=""
            >
              Kernel modules
            </dt>
            <dd
              class=""
            >
              0 modules
            </dd>
            <dt
              class=""
            >
              something
            </dt>
            <dd
              class=""
            >
              test
            </dd>
            <dt
              class=""
            >
              with click
            </dt>
            <dd
              class=""
            >
              <a
                href="http://localhost:5000//undefined"
              >
                1 tests
              </a>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</article>
`;
